boltffi_bindgen/src/render/swift/snapshots/boltffi_bindgen__render__swift__templates__tests__snapshot_class_with_async_method.snap
---
source: boltffi_bindgen/src/render/swift/templates.rs
assertion_line: 1297
expression: "render_class(&cls, \"boltffi\")"
---
public final class HttpClient {
    /// null after ownership was transferred to rust via `takeHandle()` (pass-by-value exported class params).
    private var handle: OpaquePointer?

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// moves the boxed rust value into the ffi callee; this wrapper must not be used afterward.
    fileprivate func takeHandle() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        let h = handle!
        handle = nil
        return h
    }

    /// same-file host thunks (e.g. async callback vtables) need the raw pointer; not `private` (type-only).
    fileprivate func ffiHandleForCall() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        return handle!
    }

    deinit {
        if let handle = handle {
            boltffi_http_client_free(handle)
        }
    }

    public func fetch(url: String) async throws -> Data {
        var url = url
        let futureHandle = url.withUTF8 { urlBuf in boltffi_http_client_fetch_start(ffiHandleForCall(), urlBuf.baseAddress!, UInt(urlBuf.count)) }
        return try await boltffiAsyncCall(
            futureHandle: futureHandle,
            pollFn: boltffi_http_client_fetch_poll,
            completeFn: boltffi_http_client_fetch_complete,
            cancelFn: boltffi_http_client_fetch_cancel,
            freeFn: boltffi_http_client_fetch_free
        ) { buf, status in
            guard status.code == 0 else { boltffi_free_buf(buf); throw FfiError(message: "FFI failed in async completion with code \(status.code)") }
            defer { boltffi_free_buf(buf) }
            return boltffiDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readBytes() }
        }
    }

}
