boltffi_bindgen/src/render/swift/snapshots/boltffi_bindgen__render__swift__templates__tests__snapshot_class_with_documented_constructors_and_method.snap
---
source: boltffi_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"boltffi\")"
---
/// A persistent key-value data store.
public final class DataStore {
    /// null after ownership was transferred to rust via `takeHandle()` (pass-by-value exported class params).
    private var handle: OpaquePointer?

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// moves the boxed rust value into the ffi callee; this wrapper must not be used afterward.
    fileprivate func takeHandle() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        let h = handle!
        handle = nil
        return h
    }

    private func ffiHandleForCall() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        return handle!
    }

    /// Creates a new data store with the given capacity.
    public init(capacity: Int32) {
        let ptr = boltffi_data_store_new(capacity)!
        self.handle = ptr
    }

    /// Creates a data store with sensible default settings.
    public static func withDefaults() -> DataStore {
        let ptr = boltffi_data_store_with_defaults()!
        return DataStore(handle: ptr)
    }

    deinit {
        if let handle = handle {
            boltffi_data_store_free(handle)
        }
    }

    /// Inserts a value into the store by key.
    public func insert(key: String) {
        var key = key
        key.withUTF8 { keyBuf in
            boltffi_data_store_insert(ffiHandleForCall(), keyBuf.baseAddress!, UInt(keyBuf.count))
        }
    }

}
