boltffi_bindgen/src/render/swift/snapshots/boltffi_bindgen__render__swift__templates__tests__snapshot_class_with_nullable_handle_return.snap
---
source: boltffi_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"boltffi\")"
---
public final class Cache {
    /// null after ownership was transferred to rust via `takeHandle()` (pass-by-value exported class params).
    private var handle: OpaquePointer?

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// moves the boxed rust value into the ffi callee; this wrapper must not be used afterward.
    fileprivate func takeHandle() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        let h = handle!
        handle = nil
        return h
    }

    /// same-file host thunks (e.g. async callback vtables) need the raw pointer; not `private` (type-only).
    fileprivate func ffiHandleForCall() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        return handle!
    }

    deinit {
        if let handle = handle {
            boltffi_cache_free(handle)
        }
    }

    public func get(key: String) -> CacheEntry? {
        var key = key
        return key.withUTF8 { keyBuf in
            guard let ptr = boltffi_cache_get(ffiHandleForCall(), keyBuf.baseAddress!, UInt(keyBuf.count)) else { return nil }
            return CacheEntry(handle: ptr)
        }
    }

}
