boltffi_bindgen/src/render/swift/snapshots/boltffi_bindgen__render__swift__templates__tests__snapshot_class_with_pass_handle_constructor_param.snap
---
source: boltffi_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"boltffi\")"
---
public final class Receiver {
    /// null after ownership was transferred to rust via `takeHandle()` (pass-by-value exported class params).
    private var handle: OpaquePointer?

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// moves the boxed rust value into the ffi callee; this wrapper must not be used afterward.
    fileprivate func takeHandle() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        let h = handle!
        handle = nil
        return h
    }

    private func ffiHandleForCall() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        return handle!
    }

    public init(endpoint: Endpoint) {
        let ptr = boltffi_receiver_new(endpoint.takeHandle())!
        self.handle = ptr
    }

    deinit {
        if let handle = handle {
            boltffi_receiver_free(handle)
        }
    }

}
