boltffi_bindgen/src/render/swift/snapshots/boltffi_bindgen__render__swift__templates__tests__snapshot_class_with_stream.snap
---
source: boltffi_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"boltffi\")"
---
public final class EventSource {
    /// null after ownership was transferred to rust via `takeHandle()` (pass-by-value exported class params).
    private var handle: OpaquePointer?

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// moves the boxed rust value into the ffi callee; this wrapper must not be used afterward.
    fileprivate func takeHandle() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        let h = handle!
        handle = nil
        return h
    }

    /// same-file host thunks (e.g. async callback vtables) need the raw pointer; not `private` (type-only).
    fileprivate func ffiHandleForCall() -> OpaquePointer {
        precondition(handle != nil, "BoltFFI: handle was already consumed")
        return handle!
    }

    deinit {
        if let handle = handle {
            boltffi_event_source_free(handle)
        }
    }

    public func events() -> _Concurrency.AsyncStream<String> {
        _Concurrency.AsyncStream<String>(bufferingPolicy: .unbounded) { continuation in
            guard let subscription = boltffi_event_source_events_subscribe(self.ffiHandleForCall()) else {
                continuation.finish()
                return
            }
            let context = WireStreamContextBase(
                subscription: subscription, batchSize: 16,
                drainAvailableItems: { subscription, batchSize in
                    boltffiDrainWireStreamBatch(
                        subscription: subscription,
                        batchSize: batchSize,
                        popBatch: boltffi_event_source_events_pop_batch,
                        freeBuf: boltffi_free_buf
                    ) { reader in
                        let count = Int(reader.readU32())
                        for _ in 0..<count {
                            let item = reader.readString()
                            _ = continuation.yield(item)
                        }
                    }
                },
                poll: boltffi_event_source_events_poll,
                unsubscribe: boltffi_event_source_events_unsubscribe,
                freeFn: boltffi_event_source_events_free,
                atomicCas: boltffi_atomic_u8_cas,
                finish: { continuation.finish() }
            )
            continuation.onTermination = { @Sendable _ in context.requestTermination() }
            context.start()
        }
    }
}
